@@ -6,7 +6,6 @@ import com.copyright.rup.dist.foreign.domain.common.util.UsageBatchUtils;
 
 import java.io.OutputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -20,7 +19,7 @@ import java.util.List;
  */
 public class NtsUsageCsvReportHandler extends BaseCsvReportHandler<UsageDto> {
 
-    private static final List<String> HEADERS = Arrays.asList("Detail ID", "Detail Status", "Product Family",
+    private static final List<String> HEADERS = List.of("Detail ID", "Detail Status", "Product Family",
         "Usage Batch Name", "RRO Account #", "RRO Name", "RH Account #", "RH Name", "Wr Wrk Inst", "System Title",
         "Standard Number", "Standard Number Type", "Fiscal Year", "Payment Date", "Title", "Article", "Publisher",
         "Pub Date", "Number of Copies", "Reported Value", "Gross Amt in USD", "Market", "Market Period From",
